--- a/src/main/resources/templates/admin/country-manager.html
+++ b/src/main/resources/templates/admin/country-manager.html
@@ -90,8 +90,8 @@
                                 <td id="nameCountry" th:text="${item.name}"></td>
 
                                 <td>
-                                    <a class="btn btn-danger" th:href="@{'/country/delete/' + ${item.id}}">Chỉnh sửa</a>
-                                    <a class="btn btn-danger" th:href="@{'/country/delete/' + ${item.id}}">Xóa</a>
+                                    <a class="btn btn-danger" >Chỉnh sửa</a>
+                                    <a class="btn btn-danger">Xóa</a>
                                 </td>
                             </tr>
                             </tbody>
