--- a/src/main/resources/templates/admin/movie/movie-add.html
+++ b/src/main/resources/templates/admin/movie/movie-add.html
@@ -149,7 +149,8 @@
                                           class="form-control"></textarea>
                             </div>
                             <button class="btn btn-info mx-4" type="submit">Lưu</button>
-                            <button class="btn btn-default" type="submit">Thoát</button>
+                            <a class="btn btn-default" type="button"
+                               th:href="@{/admin/movies}">Thoát</a>
                         </form>
                     </div>
                 </div>
