--- a/src/main/resources/templates/admin/movie/movie-series.html
+++ b/src/main/resources/templates/admin/movie/movie-series.html
@@ -35,7 +35,8 @@
                                     <th>Năm phát hành</th>
                                     <th>Lượt xem</th>
                                     <th>Trạng trái</th>
-                                    <th>Hành động</th>
+                                    <th></th>
+                                    <th></th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -46,15 +47,21 @@
                                     <td id="releaseYear" th:text="${movie.releaseYear}"></td>
                                     <td id="viewMovie" th:text="${movie.view}"></td>
                                     <td id="status" >
-                                        <span class="badge badge-default" th:if="${movie.status==true}"> Còn phát</span>
-                                        <span class="badge badge-default" th:unless="${movie.status==true}"> Hết phát</span>
+                                        <span class="badge badge-danger" th:if="${movie.status==true}"> Còn phát</span>
+                                        <span class="badge badge-danger" th:unless="${movie.status==true}"> Hết phát</span>
                                     </td>
                                     <td class="w-25">
                                         <a class="btn btn-secondary mx-3"
                                                 th:href="@{/admin/movies/series/add/{id}(id=${movie.id})}">
                                                     Thêm tập</a>
-                                        <a class="btn btn-info my-3"type="button">Chi tiết</a>
-                                        <button class="btn btn-danger"type="button">Vô hiệu hóa</button>
+                                        <button class="btn btn-info mx-3"
+                                                type="button"
+                                                id="detail-movie">Chi tiết</button>
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-danger" type="button"
+                                           id="btn-disable"
+                                           th:href="@{/admin/movies/disable/{id}(id=${movie.id})}">Disable/Enable</a>
                                     </td>
                                 </tr>
                             </table>
@@ -71,8 +78,6 @@
 <section th:replace="admin/layout/admin-layout.html::js">
 </section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script th:src="@{/admin/js/cast.js}" type="application/javascript">
-
-</script>
+<script type="application/javascript" th:src="@{/admin/js/custom.js}"></script>
 </body>
 </html>
